--- a/public/client/assets/css/style.css
+++ b/public/client/assets/css/style.css
@@ -79,10 +79,11 @@ h6 {
 # Header
 --------------------------------------------------------------*/
 #header {
-  background: #fff;
+  background: #ffffffbe;
   transition: all 0.5s;
   z-index: 997;
   padding: 20px 0;
+  opacity:0.6;
 }
 
 #header.header-scrolled {
@@ -490,6 +491,7 @@ section {
   left: 0;
   right: 0;
   transform: skewY(-3deg);
+  
 }
 
 /*--------------------------------------------------------------
@@ -1972,10 +1974,11 @@ section {
 #footer .footer-top {
   padding: 60px 0 30px 0;
   background: #1b1b1b;
+  margin-top: 280px;
 }
 
 #footer .footer-top .footer-contact {
-  margin-bottom: 30px;
+  margin-bottom: 60px;
 }
 
 #footer .footer-top .footer-contact h3 {
